cmake_minimum_required(VERSION 3.31)
project(week9_lab1)

set(CMAKE_CXX_STANDARD 20)

add_executable(week9_lab1 main.cpp
        problem1.cpp
        problem1.h
        problem2.cpp
        problem2.h
        problem3.cpp
        problem3.h
        problem4.cpp
        problem4.h
        problem5.cpp
        problem5.h
        problem6.cpp
        problem6.h
        problem7.cpp
        problem7.h
        problem8.cpp
        problem8.h
        problem9.cpp
        problem9.h)
